--- a/ejercicio _1.html
+++ b/ejercicio _1.html
@@ -18,7 +18,7 @@
 
             <h2> Nuestras Secciones de Ayuda </h2>
 
-            <img src="trabajo_program_web/img_perritos" alt="imagen1" />
+            <img src="trabajo_program_web/perrito_1.jpg" alt="imagen1" />
 
         </center>
     
