--- a/ejercicio _1.html
+++ b/ejercicio _1.html
@@ -1,12 +1,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Ejemplo del curso</title>
+   
 </head>
+<style>
+
+
+body {text-align: center;}
+
+</style>
+</head>
+
 
 <body>
     <p>
-        <center>  
+  
             <h1> ONG - AYUDA A UN PELUDO </h1>
             Somos un grupo de voluntarios que rescatamos animales en total abandono o maltrato, los rehabilitamos, los esterilizamos , sanamos y volvemos a pegar sus corazones rotos, por tanta maldad, y les buscamos las mejores familias para ellos.
             Somos un Fundación sin fines de lucro, nuestro fuerza nos la dan ellos al verlos con una familia de verdad. 
@@ -20,6 +28,5 @@
 
             <img src="trabajo_program_web/perrito_1.jpg" alt="imagen1" />
 
-        </center>
     
 </body>
