--- a/ejercicio _1.html
+++ b/ejercicio _1.html
@@ -6,14 +6,14 @@
 <style>
 
 
-body {text-align: center;}
+div {text-align: center;}
 
 </style>
 </head>
 
 
 <body>
-    <p>
+    <div>
   
             <h1> ONG - AYUDA A UN PELUDO </h1>
             Somos un grupo de voluntarios que rescatamos animales en total abandono o maltrato, los rehabilitamos, los esterilizamos , sanamos y volvemos a pegar sus corazones rotos, por tanta maldad, y les buscamos las mejores familias para ellos.
@@ -25,8 +25,9 @@ body {text-align: center;}
             Natalia Quintana - Team Member
 
             <h2> Nuestras Secciones de Ayuda </h2>
-
-            <img src="trabajo_program_web/perrito_1.jpg" alt="imagen1" />
-
+    </div>
+            <img src="trabajo_program_web/gatos.jpeg" alt="" width="250px" height="150px"/>  <a href="#ordinary-target">Gatos</a> <br><br>
+            <img src="trabajo_program_web/perritos.jpeg" alt="" width="250px" height="150px"/> <a href="file:///Users/josequintero/Program_web/homework/perritos.html">Perros</a>
+    
     
 </body>
