--- a/ejercicio _1.html
+++ b/ejercicio _1.html
@@ -26,7 +26,7 @@ div {text-align: center;}
 
             <h2> Nuestras Secciones de Ayuda </h2>
     </div>
-            <img src="trabajo_program_web/gatos.jpeg" alt="" width="250px" height="150px"/>  <a href="#ordinary-target">Gatos</a> <br><br>
+            <img src="trabajo_program_web/gatos.jpeg" alt="" width="250px" height="150px"/>  <a href="file:///Users/josequintero/Program_web/homework/gatitos.html">Gatos</a> <br><br>
             <img src="trabajo_program_web/perritos.jpeg" alt="" width="250px" height="150px"/> <a href="file:///Users/josequintero/Program_web/homework/perritos.html">Perros</a>
     
     
