--- a/perritos.html
+++ b/perritos.html
@@ -25,7 +25,7 @@ div {text-align: center;}
 
             <h2> Nuestros Perros en busqueda de Familia </h2>
     </div>
-            <img src="trabajo_program_web/perrito_1.png" alt="" width="250px" height="150px"/>  <a href="#ordinary-target">Bartolomeo</a> <br><br>
+            <img src="trabajo_program_web/perrito_1.png" alt="" width="250px" height="150px"/>  <a href="file:///Users/josequintero/Program_web/homework/perrito_bartolomeo.html">Bartolomeo</a> <br><br>
             <img src="trabajo_program_web/perrito_2.png" alt="" width="250px" height="150px"/> <a href="#ordinary-target">Leo</a> <br><br>
             <img src="trabajo_program_web/perrito_3.jpeg" alt="" width="250px" height="150px"/> <a href="#ordinary-target">Kin</a>
     
