--- a/gatitos.html
+++ b/gatitos.html
@@ -24,9 +24,9 @@ div {text-align: center;}
 
             <h2> Nuestros Gatos en busqueda de Familia </h2>
     </div>
-            <img src="trabajo_program_web/gato_1.jpeg" alt="" width="250px" height="150px"/>  <a href="file:///Users/josequintero/Program_web/homework/gatito_ginger.html">Ginger</a> <br><br>
-            <img src="trabajo_program_web/gato_2.jpeg" alt="" width="250px" height="150px"/> <a href="file:///Users/josequintero/Program_web/homework/gatito_tommy.html">Tommy</a> <br><br>
-            <img src="trabajo_program_web/gato_3.jpeg" alt="" width="250px" height="150px"/> <a href="file:///Users/josequintero/Program_web/homework/gatito_lucifer.html">Lucifer</a>
+            <img src="imagenes/gato_1.jpeg" alt="" width="250px" height="150px"/>  <a href="paginas_de_gatitos/gatito_ginger.html">Ginger</a> <br><br>
+            <img src="imagenes/gato_2.jpeg" alt="" width="250px" height="150px"/> <a href="paginas_de_gatitos/gatito_tommy.html">Tommy</a> <br><br>
+            <img src="imagenes/gato_3.jpeg" alt="" width="250px" height="150px"/> <a href="paginas_de_gatitos/gatito_lucifer.html">Lucifer</a>
     
     
 </body>
