--- a/index.html
+++ b/index.html
@@ -1,9 +1,42 @@
-<html>
-  <head>
-    <title> incicio</title>
-    </head>
-  <body>
-    <div> <p> Hola Mundo </p>
-      </div>
-    </body>
-  <html>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mi página</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <div class="sidebar">
+    <ul>
+      <li><a href="#">Inicio</a></li>
+      <li><a href="pagina_nosotros.html">Nosotros</a></li>
+      <li><a href="perritos.html">Perros</a></li>
+      <li><a href="gatitos.html">Gatos</a></li>
+      <li><a href="#">Contactos</a></li>
+    </ul>
+  </div>
+
+  <div class="main-content">
+    <div class="color-segment blue">
+      <h2>Adopta un amigo peludo</h2>
+      <p>En Ayuda a un Peludo nos esforzamos por rescatar y cuidar de perritos y gatos en situación de calle. Nuestro objetivo es encontrar hogares amorosos para cada uno de ellos. ¡Adopta hoy y salva una vida!</p>
+    </div>
+
+    <div class="color-segment yellow">
+      <h2>Refugio para animales necesitados</h2>
+      <p>Nuestro refugio es un lugar seguro para los animales que han sido rescatados de situaciones de abuso y abandono. Proporcionamos atención médica, alimentación y amor a cada uno de nuestros peludos. ¡Ven a visitarnos!</p>
+    </div>
+
+    <div class="color-segment orange">
+      <h2>Educación sobre adopción y esterilización</h2>
+      <p>En Ayuda a un Peludo creemos en la importancia de la educación sobre adopción y esterilización. Ofrecemos talleres y eventos para enseñar a nuestra comunidad sobre la importancia de ser dueños responsables de mascotas.</p>
+    </div>
+
+    <div class="color-segment red">
+      <h2>Donaciones para ayudar a nuestros amigos peludos</h2>
+      <p>Las donaciones son esenciales para nuestro trabajo. Nos permiten proporcionar atención médica, alimento y alojamiento para nuestros peludos necesitados. ¡Cada donación cuenta y ayuda a salvar vidas!</p>
+    </div>
+  </div>
+</body>
+</html>
