--- a/pagina_nosotros.html
+++ b/pagina_nosotros.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -26,8 +27,8 @@ div {text-align: center;}
 
             <h2> Nuestras Secciones de Ayuda </h2>
     </div>
-            <img src="trabajo_program_web/gatos.jpeg" alt="" width="250px" height="150px"/>  <a href="file:///Users/josequintero/Program_web/homework/gatitos.html">Gatos</a> <br><br>
-            <img src="trabajo_program_web/perritos.jpeg" alt="" width="250px" height="150px"/> <a href="file:///Users/josequintero/Program_web/homework/perritos.html">Perros</a>
+            <img src="imagenes/gatos.jpeg" alt="" width="250px" height="150px"/>  <a href="gatitos.html">Gatos</a> <br><br>
+            <img src="imagenes/perritos.jpeg" alt="" width="250px" height="150px"/> <a href="perritos.html">Perros</a>
     
     
 </body>
